<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_label">System UI</string>
    <string name="status_bar_clear_all_button">Clear</string>
    <string name="status_bar_no_notifications_title">No notifications</string>
    <string name="status_bar_ongoing_events_title">Ongoing</string>
    <string name="status_bar_latest_events_title">Notifications</string>
    <string name="battery_low_title">Battery may run out soon</string>
    <string name="battery_low_percent_format"><xliff:g id="percentage">%s</xliff:g> remaining</string>
    <string name="battery_low_percent_format_hybrid"><xliff:g id="percentage">%1$s</xliff:g> remaining, about <xliff:g id="time">%2$s</xliff:g> left based on your usage</string>
    <string name="battery_low_percent_format_hybrid_short"><xliff:g id="percentage">%1$s</xliff:g> remaining, about <xliff:g id="time">%2$s</xliff:g> left</string>
    <string name="battery_low_percent_format_saver_started"><xliff:g id="percentage">%s</xliff:g> remaining. Battery Saver is on.</string>
    <string name="invalid_charger">Can\'t charge via USB. Use the charger that came with your device.</string>
    <string name="invalid_charger_title">Can\'t charge via USB</string>
    <string name="invalid_charger_text">Use the charger that came with your device</string>
    <string name="battery_low_why">Settings</string>
    <string name="battery_saver_confirmation_title">Turn on Battery Saver?</string>
    <string name="battery_saver_confirmation_title_generic">About Battery Saver</string>
    <string name="battery_saver_confirmation_ok">Turn on</string>
    <string name="battery_saver_start_action">Turn on Battery Saver</string>
    <string name="status_bar_settings_settings_button">Settings</string>
    <string name="status_bar_settings_wifi_button">Wi-Fi</string>
    <string name="status_bar_settings_auto_rotation">Auto-rotate screen</string>
    <string name="status_bar_settings_mute_label">MUTE</string>
    <string name="status_bar_settings_auto_brightness_label">AUTO</string>
    <string name="status_bar_settings_notifications">Notifications</string>
    <string name="status_bar_network_name_separator" translatable="false">|</string>
    <string name="bluetooth_tethered">Bluetooth tethered</string>
    <string name="status_bar_input_method_settings_configure_input_methods">Set up input methods</string>
    <string name="status_bar_use_physical_keyboard">Physical keyboard</string>
    <string name="usb_device_permission_prompt">Allow <xliff:g id="application">%1$s</xliff:g> to access <xliff:g id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_accessory_permission_prompt">Allow <xliff:g id="application">%1$s</xliff:g> to access <xliff:g id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_device_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_device">%2$s</xliff:g>?</string>
    <string name="usb_accessory_confirm_prompt">Open <xliff:g id="application">%1$s</xliff:g> to handle <xliff:g id="usb_accessory">%2$s</xliff:g>?</string>
    <string name="usb_accessory_uri_prompt">No installed apps work with this USB accessory. Learn more about this accessory at <xliff:g id="url">%1$s</xliff:g></string>
    <string name="title_usb_accessory">USB accessory</string>
    <string name="label_view">View</string>
    <string name="always_use_device">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_device">%2$s</xliff:g> is connected</string>
    <string name="always_use_accessory">Always open <xliff:g id="application">%1$s</xliff:g> when <xliff:g id="usb_accessory">%2$s</xliff:g> is connected</string>
    <string name="usb_debugging_title">Allow USB debugging?</string>
    <string name="usb_debugging_message">The computer\'s RSA key fingerprint is:\n<xliff:g id="fingerprint">%1$s</xliff:g></string>
    <string name="usb_debugging_always">Always allow from this computer</string>
    <string name="usb_debugging_allow">Allow</string>
    <string name="usb_debugging_secondary_user_title">USB debugging not allowed</string>
    <string name="usb_debugging_secondary_user_message">The user currently signed in to this device can\'t turn on USB debugging. To use this feature, switch to the primary user.</string>
    <string name="usb_contaminant_title">USB port disabled</string>
    <string name="usb_contaminant_message">To protect your device from liquid or debris, the USB port is disabled and won\u2019t detect any accessories.\n\nYou\u2019ll be notified when it\u2019s okay to use the USB port again.</string>
    <string name="usb_port_enabled">USB port enabled to detect chargers and accessories</string>
    <string name="usb_disable_contaminant_detection">Enable USB</string>
    <string name="learn_more">Learn more</string>
    <string name="compat_mode_on">Zoom to fill screen</string>
    <string name="compat_mode_off">Stretch to fill screen</string>
    <string name="global_action_screenshot">Screenshot</string>
    <string name="screenshot_saving_ticker">Saving screenshot\u2026</string>
    <string name="screenshot_saving_title">Saving screenshot\u2026</string>
    <string name="screenshot_saved_title">Screenshot saved</string>
    <string name="screenshot_saved_text">Tap to view your screenshot</string>
    <string name="screenshot_failed_title">Couldn\'t save screenshot</string>
    <string name="screenshot_failed_to_save_unknown_text">Try taking screenshot again</string>
    <string name="screenshot_failed_to_save_text">Can\'t save screenshot due to limited storage space</string>
    <string name="screenshot_failed_to_capture_text">Taking screenshots isn\'t allowed by the app or
        your organization</string>
    <string name="screenrecord_name">Screen Recording</string>
    <string name="screenrecord_channel_description">Ongoing notification for a screen record session</string>
    <string name="screenrecord_start_label">Start Recording</string>
    <string name="screenrecord_mic_label">Record voiceover</string>
    <string name="screenrecord_taps_label">Show taps</string>
    <string name="screenrecord_stop_label">Stop</string>
    <string name="screenrecord_pause_label">Pause</string>
    <string name="screenrecord_resume_label">Resume</string>
    <string name="screenrecord_cancel_label">Cancel</string>
    <string name="screenrecord_share_label">Share</string>
    <string name="screenrecord_delete_label">Delete</string>
    <string name="screenrecord_cancel_success">Screen recording canceled</string>
    <string name="screenrecord_save_message">Screen recording saved, tap to view</string>
    <string name="screenrecord_delete_description">Screen recording deleted</string>
    <string name="screenrecord_delete_error">Error deleting screen recording</string>
    <string name="screenrecord_permission_error">Failed to get permissions</string>
    <string name="usb_preference_title">USB file transfer options</string>
    <string name="use_mtp_button_title">Mount as a media player (MTP)</string>
    <string name="use_ptp_button_title">Mount as a camera (PTP)</string>
    <string name="installer_cd_button_title">Install Android File Transfer app for Mac</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_home">Home</string>
    <string name="accessibility_menu">Menu</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_rotate_button">Rotate screen</string>
    <string name="accessibility_recent">Overview</string>
    <string name="accessibility_search_light">Search</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_phone_button">Phone</string>
    <string name="accessibility_voice_assist_button">Voice Assist</string>
    <string name="accessibility_unlock_button">Unlock</string>
    <string name="accessibility_waiting_for_fingerprint">Waiting for fingerprint</string>
    <string name="accessibility_unlock_without_fingerprint">Unlock without using your fingerprint</string>
    <string name="accessibility_scanning_face">Scanning face</string>
    <string name="accessibility_send_smart_reply">Send</string>
    <string name="accessibility_manage_notification">Manage notifications</string>
    <string name="phone_label">open phone</string>
    <string name="voice_assist_label">open voice assist</string>
    <string name="camera_label">open camera</string>
    <string name="cancel">Cancel</string>
    <string name="biometric_dialog_confirm">Confirm</string>
    <string name="biometric_dialog_try_again">Try again</string>
    <string name="biometric_dialog_empty_space_description">Empty region, tap to cancel authentication</string>
    <string name="biometric_dialog_face_icon_description_idle">Please try again</string>
    <string name="biometric_dialog_face_icon_description_authenticating">Looking for your face</string>
    <string name="biometric_dialog_face_icon_description_authenticated">Face authenticated</string>
    <string name="biometric_dialog_face_icon_description_confirmed">Confirmed</string>
    <string name="biometric_dialog_tap_confirm">Tap Confirm to complete</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="accessibility_fingerprint_dialog_fingerprint_icon">Fingerprint icon</string>
    <string name="face_dialog_looking_for_face">Looking for you\u2026</string>
    <string name="accessibility_face_dialog_face_icon">Face icon</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_no_battery">No battery.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_no_phone">No phone.</string>
    <string name="accessibility_phone_one_bar">Phone one bar.</string>
    <string name="accessibility_phone_two_bars">Phone two bars.</string>
    <string name="accessibility_phone_three_bars">Phone three bars.</string>
    <string name="accessibility_phone_signal_full">Phone signal full.</string>
    <string name="accessibility_no_data">No data.</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="screen_pinning_title">Screen is pinned</string>
    <string name="screen_pinning_description">This keeps it in view until you unpin. Touch &amp; hold Back and Overview to unpin.</string>
    <string name="screen_pinning_positive">Got it</string>
    <string name="screen_pinning_negative">No thanks</string>
    <string name="click_sort">Click</string>
    <string name="name_sort">A - Z</string>
    <string name="time_sort">Time</string>
    <string name="default_sort">Default</string>
    <string name="startupmenu_all_apps">All Apps</string>
    <string name="startupmenu_search_app">Search Application</string>
    <string name="startupmenu_recent_apps">Recent Apps</string>
    <string name="startupmenu_recent_document">Recent Documents</string>
    <string name="startupmenu_document_null">Null Documents</string>
    <string name="startupmenu_recent_null">Null Recent Apps</string>
    <string name="wifi_test">Wifi_testsadsfadfdsdghjkassdfghjklsdfghjkl;</string>
    <string name="wifi_try_cnt">Connect</string>
    <string name="wifi_cnting">Connecting</string>
</resources>